# ucurv

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  build.yaml  demo_fwd_inv.ipynb  demo_fwd_inv_3d.ipynb  demo_fwd_inv_4d.ipynb  demo_meyer_wavelet.ipynb  dev_script.ipynb  pyproject.toml  setup.py  test_ucurv.py  tutorial_1.ipynb  ucurv.py  zoneplate.py
.github/workflows/: build.yaml
devscript/: demo_fwd_inv_3d.ipynb  script_pylops.ipynb  tutorial_1a.ipynb
docs/source/: conf.py  index.rst  modules.rst  ucurv.backend.rst  ucurv.meyerwavelet.rst  ucurv.rst  ucurv.ucurv.rst  ucurv.util.rst  ucurv.zoneplate.rst
docs/source/api/: ucurv.backend.rst  ucurv.meyerwavelet.rst  ucurv.ucurv.rst  ucurv.util.rst  ucurv.zoneplate.rst
tests/: __init__.py  test_func.py  test_meyer.py  test_ucurv.py
ucurv/: __init__.py  backend.py  meyerwavelet.py  ucurv.py  util.py  zoneplate.py
ucurv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
