# pyproject.toml
[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write the computed version into your package so no runtime SCM dep
write_to      = "ucurv/_version.py"

version_scheme = "post-release"
local_scheme   = "dirty-tag"

[project]
name = "ucurv"
version = "0.1.1"
description = "Uniform Discrete Curvelet Transform"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
authors = [
  { name = "Duy Nguyen", email = "duyn26364@gmail.com" },
]
license = {file = "LICENSE.md"}
dependencies = [
  "numpy",
  "matplotlib",
  "pytest",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
urls = { "Homepage" = "https://github.com/yud08/ucurv" }

[tool.setuptools.packages.find]

include = ["ucurv"]
