# pyproject.toml
[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
  "setuptools_scm[toml]>=6.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# write the computed version into your package so no runtime SCM dep
write_to      = "ucurv/_version.py"

version_scheme = "post-release"
local_scheme   = "dirty-tag"

[project]
name = "ucurv"
version = "0.1.1"
description = "Uniform Discrete Curvelet Transform"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.6"
authors = [
  { name = "Duy Nguyen", email = "duyn26364@gmail.com" },
]
license = {file = "LICENSE.md"}
dependencies = [
  "numpy",
  "matplotlib",
]

[project.optional-dependencies]

dev = [                             # pip install ucurv[dev]
  "pytest>=7.4",
  "pytest-cov",                     # if you want coverage
] 

gpu = [                             # pip install ucurv[gpu]
  "cupy>=12.0",                     # only users with CUDA will take this
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yud08/ucurv"

[tool.setuptools.packages.find]

include = ["ucurv"]
